citations added to conclusion

--- a/chap3.tex
+++ b/chap3.tex
@@ -1510,14 +1510,14 @@ enthusiasts who want to be involved in vehicle operations.
 
 \section{Conclusion}
 
-In the end, whether you are an operator in a vehicle trying to monitor that you
-are on the right path, and not about to be killed by an undetected
-obstacle; or an operator waiting
-for their car to come pick them up, who wants to ensure that it is en route
-and not in an accident; or an operator and system-technician at a
+In the end, whether an operator is in a vehicle trying to monitor that it
+is on the right path, and not about to hit an undetected
+obstacle; or is waiting
+for a car to arrive, wanting to ensure that it is en route
+and not in an accident; or is working as a system-technician at a
 multinational corporation administering a fleet of automated vehicles,
 attempting to ensure they are not being 
-hijacked or stolen, the situation you are in is one of supervisory
+hijacked or stolen, the situation of the operator in is one of supervisory
 control. Not recognizing it as such does not make it not so, it only means we are
 likely to neglect the most important parts of the system design---in
 terms of its adoption and long-term use---by blindly following a
