--- a/concl.tex
+++ b/concl.tex
@@ -30,7 +30,7 @@ fashion.\footnote{This is not, however, to minimize the human
   and lights. Such interactions are a critical part of navigating city
   streets, and some interesting research work has been done building
   machines that take them seriously. Of particular note is Nicholas
-  Pennycooke's thesis on AEVITA\cite{???-aevita}. Negotiating street
+  Pennycooke's thesis on AEVITA \cite{aevita}. Negotiating street
   space with unpredictable and difficult-to-read human beings is a
   major stumbling block for automated vehicles.} However, there was a
 time when city streets were not primarily the venue of the automobile,
@@ -53,51 +53,51 @@ a direct outcome of an early 20th century campaign to reduce
 pedestrian deaths. ``In the early days of the automobile, it was
 drivers' job to avoid you, not your job to avoid them,'' describes
 Peter Norton, the author of \emph{Fighting Traffic}
-\cite{???-http://www.vox.com/2015/1/15/7551873/jaywalking-history}.
+\cite{voxNorton}.
 But accidents nevertheless occurred, and the victims were primarily
-children and the elderly\cite{???-vox}; and the deaths of children,
+children and the elderly\cite{voxNorton}; and the deaths of children,
 specifically, came to have a new social meaning that made them
-particularly abhorrent\cite{???-zelizer}/ 
+particularly abhorrent.
 After Mary Miner's death in 1903, the driver was almost beaten by a
-mob\cite[p. 22]{???-zelizer}. Accidental deaths of children were an
+mob \cite[p. 22]{zelizer}. Accidental deaths of children were an
 alarming problem, with a significant public response:  mobs attacked
 the killers, acts of public mourning memorialized the lost, and a
 national safety campaign began to attempt to reduce these
-deaths\cite[p. 23]{???-zelizer}. Public outrage cast automobiles as
-``frivolous playthings'' or ``pleasure cars''\cite{???-vox}, magnified
+deaths \cite[p. 23]{zelizer}. Public outrage cast automobiles as
+``frivolous playthings'' or ``pleasure cars''\cite{voxNorton}, magnified
 by a transformation in the sentimental worth of
-children\cite[p. 23]{???-zelizer}. 
+children. 
 
 This contest for public space involved a potentially radical change in
 the uses and meanings of the street. As Zelizer notes, the city street
 was formerly a playground for children, in part out of the necessity
-to find some space for play amid crowded tenements\cite[p.
-  33]{???-zelizer}. But children did not surrender their street games
+to find some space for play amid crowded tenements \cite[p.
+  33]{zelizer}. But children did not surrender their street games
 easily, and their ``eviction'' from the streets came about via safety
 campaigns and ``Americanization programs''---which encouraged
 immigrant children to use playgrounds, instead of streets, as their
 play spaces---catalyzed by the automotive threat\cite[p.
-  35]{???-zelizer}. But the deaths of children at the hands of
+  35]{zelizer}. But the deaths of children at the hands of
 automobiles were not solely placed on the shoulders of drivers. As the
 death rate became a national crisis, the
 early press ``pinned most of the blame on parents'': modern life, it
 was said, ``cannot be retarded to enable heedless children to get out
-of the way'' \cite[p. 37]{???-zelizer}. Street games were turned into
+of the way'' \cite[p. 37]{zelizer}. Street games were turned into
 criminal offenses by around 1914, and the police arrested many
 children, but fatalities kept increasing nonetheless\cite[p.
-  38]{???-zelizer}. Families were called upon to take a greater role
+  38]{zelizer}. Families were called upon to take a greater role
 in protecting children from the perils of the street; mothers were
 charged with keeping their children out of ``what had been their play
 areas'' in order to keep the roads clear for automobiles, and safety
 crusaders tended to blame mothers for the deaths of their own
-children\cite[p. 13]{???-lochlannjain}. The homogenization of the road
-for ``transit'' \cite[p. 13]{???_lochlannjain} involved not only
+children \cite[p. 73]{lochlannjain}. The homogenization of the road
+for ``transit'' \cite[p. 73]{lochlannjain} involved not only
 family pressures but a concerted legal and public relations campaign. Automakers
 and dealers, concerned by public pressure for speed governors on
 automobiles, pushed for stricter pedestrian controls across the country, and
 auto industry groups exerted significant pressure on the creation of
 the 1928 Model Municipal Traffic Ordinance in order to build a law
-that was friendly to automobiles\cite{???-vox}. To attempt to
+that was friendly to automobiles \cite{voxNorton}. To attempt to
 compensate for laws that were rarely followed and enforced,
 auto-friendly groups worked to change the public dialogue. Articles
 ghostwritten by the National Automobile Chamber of Commerce shifted
@@ -106,7 +106,7 @@ safety campaigns in schools; and police and citizens were called upon
 to shame transgressors in order to set new public standards---even the
 name for the infraction, ``jay-walking,'' was intended to create
 public opprobrium for the supposed ``hicks'' who did not know how to
-behave in cities, and to shift blame to them \cite{???-vox}. This
+behave in cities, and to shift blame to them \cite{voxNorton}. This
 change in the way streets were utilized entailed a large societal
 shift motivated by a new technology, but it would be wrong to say it
 was caused by the automobile. Instead, automobility was an enabling
@@ -117,11 +117,12 @@ street to their own advantage.\footnote{Cars were not, however, the
 the beginning of the street as we know it. Instead, the bicycle marks the
 beginning of the ``good roads'' movement, and the push for ubiquitous
 road
-paving\cite{???-http://www.vox.com/2015/3/19/8253035/roads-cyclists-cars-history}.
+paving\cite{voxCycle}.
 Bicycles and the social groups that championed their use--aided by
-asphalt manufacturers and other special interests who saw money to be made---created the
+asphalt manufacturers and other special interests who saw money to be
+made---created the 
 very roads that bicycles then had to compete with cars for space on
-\cite{???-vox2}. Many of the primary riders who had succeeded in lobbying for
+\cite{voxCycle}. Many of the primary riders who had succeeded in lobbying for
 the 1916 Federal Aid Road Act, however, switched over to pioneer the
 automobile as its popularity rose in the early 20th century.} 
 
@@ -142,8 +143,9 @@ Automobiles were long subject to disputes over their nature: were they
 fundamentally safe vehicles misused by people, or fundamentally
 dangerous technologies that required careful licensing and use to
 make safe? In one such battle over cars as ``dangerous
-instrumentalities,'' a court held that ``Until human agency intervenes, they are usually
-harmless''\cite[p. 10]{???-lochlannjain}. Such legal statements
+instrumentalities,'' a court held that ``Until human agency
+intervenes, they are usually 
+harmless'' \cite[p. 70]{lochlannjain}. Such legal statements
 explicitly involve human agency, but machine agency presents the
 possibility that such claims could be obsolesced. Are our intuitions
 affected when and if automated vehicles can be said to ``operate
@@ -192,7 +194,7 @@ Electrics factory, and to his surprise see it weep and bleed. And the
 dying robot may shoot back and, to its surprise, see a wisp of gray
 smoke arise from the electric pump that it supposed was Mr. White's
 beating heart. It would be rather a great moment of truth for both of
-them'' \cite{???-http://boingboing.net/2015/03/10/philip-k-dicks-androids-blu.html}.
+them'' \cite{androidHuman}.
 While ``Pete Something-or-Other'' does not yet exist, ``Fred White''
 is already here. Fully comprehending this is a critical task for the
 maintenance of cogent, productive public conversations---and
@@ -215,12 +217,13 @@ of vehicle operation is not widely recognized, and what can be done to
 increase popular appreciation of this operation and the important
 questions it reveals about how we design the future. Our world is
 becoming a ``cyborg planet,'' to an extent many have not yet
-realized\cite[p. 64]{ekbia}.
+realized \cite[p. 64]{ekbia}.
 
 The idea of the ``cyborg'' was introduced by Manfred Clynes and Nathan
-Kline in 1960 \cite{???-clyneskline-intoread}, as a descriptor for the alteration of human beings to
+Kline in 1960 \cite{clyneskline}, as a descriptor for the alteration
+of human beings to 
 cope with the conditions of outer space: they would be self-regulating
-\emph{cybernetic organisms}\cite[p. 66]{ekbia}. While the creation of
+\emph{cybernetic organisms} \cite[p. 66]{ekbia}. While the creation of
 such cyborg astronauts was never attempted outside of the imagination
 of science fiction writers, astronauts were indeed fashioned into
 cyborgs by their existence within suits and spacecraft with which they
@@ -230,12 +233,12 @@ philosophers of cyborg culture (and cyborg feminism), describes:
 ``Contemporary science 
 fiction is full of cyborgs---creatures simultaneously
 animal and machine, who populate worlds ambiguously natural and
-crafted''\cite[p. 117]{???-haraway}.} Meanwhile, cyborg technologies
+crafted'' \cite[p. 117]{haraway}.} Meanwhile, cyborg technologies
 abound in real life, from the extreme to the mundane: implants to
 achieve increased sensory range and experience, or to trigger orgasm
 \cite[p. 64]{ekbia}; implants to monitor vital signs; telerobotic
 arms; bots and chatbots; implants to provide neural control of
-vehicles\cite[p. 65]{ekbia}. 
+vehicles \cite[p. 65]{ekbia}. 
 
 %% ``Modern medicine is also full of
 %% cyborgs, of couplings between organism
@@ -255,13 +258,13 @@ vehicles\cite[p. 65]{ekbia}.
 
 But, more fundamentally, philosopher Andy
 Clark contends that humans are ``(disguised) \emph{natural-born}
-cyborgs''\cite[p. 66]{ekbia}. This idea is particularly compelling
+cyborgs'' \cite[p. 66]{ekbia}. This idea is particularly compelling
 because it need make no distinction between the analog and the
 digital, the material and the virtual. It is not an artifact of the
 present moment, but a fundamental component of human experience. To
 Clark, our ``ability to enter into deep and complex relationships with
 nonbiological constructs, props, and aids'' is what best explains our
-distinctive intelligence\cite[p. 66-67]{ekbia}. This therefore holds
+distinctive intelligence \cite[p. 66-67]{ekbia}. This therefore holds
 not just for cars, or information and computer technologies, but for
 all kinds of technology. Our existence as a technological species is
 not new, and human technological augmentation goes back into
@@ -270,7 +273,7 @@ artifacts---whether the tool is a smartphone, a loom, a wheel, or
 fire---is what makes us, fundamentally, cyborg beings.\footnote{Though Haraway holds that ``By the late 20th
 century, our time, a mythic time, we are all chimeras,
 theorized, and fabricated hybrids of machine and organism; in short,
-we are cyborgs''\cite[p. 118]{???-haraway}, I stand with Clark that we
+we are cyborgs'' \cite[p. 118]{haraway}, I stand with Clark that we
 have long been so. It is only recently however, in part due to the pressure
 that AI places on human-machine dualisms, that this state of being has
 come to be recognized.}
@@ -284,15 +287,15 @@ being remains fundamentally the same.\footnote{As Richard Horner put
   it to the test pilots assembled at the SETP banquet in 1957: ``the
   one link in the manned system which we have that improves the least
   in successive generations, is the man himself''\cite[p.
-    19]{???-mindell}.} However, this assumption rests on a long held 
+    19]{DM}.} However, this assumption rests on a long held 
 dichotomy of human and machine, and the idea that the object of
 interest is the purely biological human. If prosthetics and artificial
 organs teach us anything, however, it should be that these boundaries
 are by no means clear. AI is however heir to a world of such sharp
 boundaries: mind and body, subject
-and object, nature and culture, science and politics\cite[p.
+and object, nature and culture, science and politics \cite[p.
   327]{ekbia}. Science, engineering, and broader culture ``embody'' and
-``regenerate'' these divisions\cite[p. 327]{ekbia}, but they are
+``regenerate'' these divisions \cite[p. 327]{ekbia}, but they are
 fundamentally only true or useful analytical frameworks, so we must
 ask whether they continue to serve us well, or whether they should,
 despite their attractive simplicity, be retired.\footnotemark Cognitive
@@ -307,7 +310,8 @@ of intelligence or capability, and instead ask how  ``humans and machines
 \footnotetext{Ekbia, considering the source of ideologies of AI, sees its roots in
 the teachings of Democritus---carried forward by Hobbes
 and Descartes---and the separation of the atomist world and our
-representations of it.\cite[p. ???]{ekbia} These dualisms are deeply engrained in our
+representations of it \cite[p. 331]{ekbia}. These dualisms are deeply
+engrained in our 
 thought patterns, but fail us when thinking about advanced
 technologies and their impacts because they favor unrealistic---and
 indeed, unreal---totalisms: all human or all machine, fully manual driving or fully
@@ -320,7 +324,7 @@ The problem facing AI, according to Lucy Suchman\footnote{Note that
   \cite[p. 331-332]{ekbia}.}, ``is less that we attribute agency to
 computational artifacts than that our language for talking about
 agency, whether for persons or artifacts, presupposes a field of
-discrete, self-standing entities''\cite[p. 263]{SuchmanPlans}.
+discrete, self-standing entities'' \cite[p. 263]{SuchmanPlans}.
 Instead, we should be asking how does intelligent behavior emerge in
 the interactions of 
 humans and machines, refusing to fix \emph{a priori} the category of
@@ -344,10 +348,10 @@ should it be an all-or-nothing prospect. Legal scholars note that
 torts may already be distributed across human and nonhuman actors
 (operator, owner, seller, manufacturer, distributors) in legal
 rulings, but distribution of torts has an ethical
-and ideological stance\cite{???-suemycar,etc}. The distribution of
+and ideological stance \cite{suemycar} \cite{proximityLiability}. The distribution of
 torts to different actors in the system may vary from situation to
 situation, given the capacities of 
-the vehicle and the driver\cite{???-disableddriverexample}. However,
+the vehicle and the driver \cite[p. 267]{suemycar}. However,
 the current liability framework does have problems, including the
 potential to scapegoat the human being, and the expense and difficulty
 of pursuing litigation.}
@@ -374,7 +378,7 @@ re-making something the public is willing to accept? And who will
 benefit from it? As Dieter Zetsche, chairman of Daimler AG describes,
 ``anyone who focuses solely on the technology has not yet grasped how 
 autonomous driving will change our
-society''\cite{???-http://www.slashgear.com/how-mercedes-f-015-self-driving-car-is-shaping-smart-cities-20374602/}.
+society'' \cite{slashgearDavies}.
 But as we have found in the past, changes that favor the users or
 manufacturers of automated vehicles may not favor other users of city
 spaces, who may find their freedoms foreclosed upon. The history of
@@ -418,7 +422,7 @@ just such a thing: ``There’s no reason why a taxi driver couldn't have
 something like three screens in front of him . . . and sit in a studio
 directing three or four or five cars through the roads of London where
 they are driverless cars with a human controlling the GPS''
-\cite{???-http://www.forbes.com/sites/freddiedawson/2015/03/31/how-far-away-is-driverless-technology-really/}.
+\cite{forbesDawson}.
 Whether the appropriate number is 5 or 5000 cars, this vision seems
 plausible, and bears similarities to current Predator UAV operations.}
 
@@ -436,7 +440,7 @@ system failure leading to financial ruin. Even Tesla Motors, bullish
 about its forthcoming ``autopilot'' technology, admits the limitations
 of current automated systems: automated driving will not be available
 in residential neighborhoods because they do not believe it is safe
-enough\cite{???-http://www.slashgear.com/tesla-model-s-autopilot-update-due-in-3-4-months-19374458/}.
+enough\cite{slashgearDaviesT}.
 More capable systems, able to operate without failure in a greater
 proportion of real-world situations, may require human involvement and
 supervision, at the very least until significant open problems in
@@ -457,7 +461,7 @@ technologies.\footnote{Other barriers to public acceptance that are
   recent University of Michigan study suggests car sickness could be a
   problem for automated vehicle systems, as well as significantly reducing their
   convenience factor
-  \cite{???-http://www.telegraph.co.uk/finance/newsbysector/industry/engineering/11523167/Why-travel-sickness-could-put-the-brakes-on-driverless-cars.html}.
+  \cite{SivakSchoettleSick}.
   Certain levels of human involvement would reduce the perceived productivity
   gains of automated systems, but could ameliorate travel sickness issues.} Though
 this may be distasteful to some technologists invested in furthering
@@ -573,7 +577,7 @@ represents a deeply suspect investment.
 
 Problematically, the automated car---like the
 ``smart city'' which has already been critiqued in this
-way\cite{???}---presents the opportunity for successful technology
+way \cite{greenfieldSmart}---presents the opportunity for successful technology
 companies to wrest greater control over everyday life, to worm their
 way more deeply into our existence and thereby make themselves
 indispensable. Automation can be a tool to enable one group of
@@ -597,7 +601,8 @@ argument revolves around responsibility for the rollout of
 self-driving systems. On the pro-side, commentators stress the many
 thousands who will die if self-driving systems are not implemented
 soon, using that as a lever to argue for the moral imperative of
-speeding up their legalization and acceptance.\cite{???} On the con-side, in
+speeding up their legalization and acceptance \cite{baileyReason}
+\cite{howardRobots}. On the con-side, in 
 this interpretation, stand the risk-averse regulators: current deaths
 are obviously not on their hands, but if one child is killed by a
 ``robot car,'' they face public censure. But though this cartoon-like
