--- a/intro.tex
+++ b/intro.tex
@@ -8,7 +8,7 @@
 It is early August, 1925, and a strange spectacle greets viewers on
 Broadway in New York City. An empty car lurches uncertainly down the
 street,\footnote{This description is adapted from Time
-  Magazine\cite{???-Science-radio-auto}.} followed closely behind by a
+  Magazine \cite{ScienceRadio}.} followed closely behind by a
 chase car, filled with radio equipment and several men, one driving,
 and one furiously operating a set of controls. The lead car features a
 diamond-shaped antenna sprouting from where the back seat should be,
@@ -353,29 +353,34 @@ vehicle, a specially equipped 5-ton Mercedes-Benz van---computerized
 controls could be used to perform all necessary driver inputs---was
 fitted with cameras, other sensors, and an image-processing system to
 close the control loop and drive the vehicle based on visual
-information.\cite{???} This early experiment, VaMoRs, paralleled in the United
+information.\cite{???} This early experiment,
+VaMoRs,\footnote{Versuchsfahrzeug f\"{u}r autonome Mobilit\"{a}t und
+  Rechnersehen, or ``test vehicle for autonomous mobility and computer vision''} paralleled in the United 
 States with a Carnegie Mellon-developed vehicle based on a Chevrolet
 panel van, was successfully tested on roads without traffic at up to
 60 miles per hour,\cite{???} and was soon followed by new projects produced as
-part of the EUREKA PROMETHEUS project\cite{???}. The largest driverless vehicle
+part of the EUREKA PROMETHEUS\footnote{PROgraMme for a European
+  Traffic of Highest Efficiency and Unprecedented Safety} project\cite{???}. The largest driverless vehicle
 research project of the time, funded by EU member states to the tune
 of almost 750 million Euros, PROMETHEUS ran from 1987 to 1995 and
-involved the VaMP vehicle from Dickmanns's research lab along with its
-Daimler-Benz twin, VITA-II. Typical of vehicles of the time, VITA used
+involved the VaMP\footnote{VaMoRs Passenger Car} vehicle from
+Dickmanns's research lab along with its 
+Daimler-Benz twin, VITA-II. Typical of vehicles of the time,
+VITA\footnote{VIsion Technology Application} used
 a CCIR\footnote{This is a particular video standard, but its specifics are
-  not important here..} analog video-camera signal processed through a framegrabber
+  not important here.} analog video-camera signal processed through a framegrabber
 which would feed the visual information into the transputer-based
-parallel-processing system\cite{???}. The VITA-II system, scaled down to fit in
+parallel-processing system \cite{???}. The VITA-II system, scaled down to fit in
 a passenger car (an S-class SEL 500), again used digitized analog
-video signals to detect lanes and other vehicles\cite{???}. Additional sensors
+video signals to detect lanes and other vehicles \cite{???}. Additional sensors
 detected brake pressure, temperature, steering angle, acceleration in
-lateral and longitudinal directions, and yaw\cite{???}. The camera systems used
+lateral and longitudinal directions, and yaw \cite{???}. The camera systems used
 applied two-camera setups with stabilized two-axis rotation to allow
-them to follow objects of interest in the scene\cite{???}. And the
+them to follow objects of interest in the scene \cite{???}. And the
 technology largely worked, with the PROMETHEUS project coming to a
 successful conclusion in 1994 and 1995 with 1000 kilometers of largely
 autonomous operation in normal traffic conditions on Paris motorways,
-as well as a finale drive from Munich to Copenhagen\cite{???}.
+as well as a finale drive from Munich to Copenhagen \cite{???}.
 Meanwhile, vision-based research also occurred actively in the United States;
 Congress passed the Intermodal 
 Surface Transportation Efficiency Act in 1991, which allowed for \$650 million
@@ -404,9 +409,10 @@ and proves similarly unhelpful, as will be described in chapter
 %% system.''', an important consideration for future work
 
 Further autonomous vehicle research has progressed incrementally from
-these vision-based beginnings. Significant interest was spurred by the
-DARPA Grand Challenge in 2004 and 2005,\cite{???} and the DARPA Urban Challenge
-in 2007, which brought together industry groups and universities to
+these vision-based beginnings. The
+DARPA Grand Challenge in 2004 and 2005 \cite{???}, and the DARPA Urban Challenge
+in 2007, spurred significant interest, and brought together industry
+groups and universities to 
 try to extend the capabilities of fully autonomous vehicles. While the
 Grand Challenge technologies bear little resemblance to current
 navigation approaches designed to deal with the complexities of
@@ -427,12 +433,12 @@ look of the autonomous car with its roof mounted LIDAR scanner, other
 companies are developing vehicles with slightly different sensors and
 techniques. Google's approach uses cameras and the rotating laser
 scanner, along with detailed pre-mapping and highly-accurate
-differential GPS\cite{???}. Mercedes, so far, focuses more on cameras and radar,
+differential GPS \cite{???}. Mercedes, so far, focuses more on cameras and radar,
 without using expensive LIDAR systems or requiring exquisitely
 detailed pre-mapping of streets---and some of these features are
 already seen in the new S-class luxury sedan, though these vehicles
 have not yet reached the level of capability of Mercedes's ``Bertha''
-test vehicle\cite{???}. But these sensing choices come with their own
+test vehicle \cite{???}. But these sensing choices come with their own
 trade-offs in terms of operations, safety, and how safety can be
 determined and proven. Even Apple claims, as of the time of writing,
 to be working on an autonomous vehicle, though its approach has not
@@ -492,12 +498,12 @@ and concepts at CES worked glitz and glamour into the dream of a
 driverless future. Mercedes-Benz's F015 autonomous car
 concept forgoes the traditional seating arrangement in favor of
 rotating chairs that turn the center of the car into a lounge or
-meeting space.\cite{???} The car's side windows are relatively minimal, its
+meeting space \cite{???}. The car's side windows are relatively minimal, its
 doors taken up primarily by touch screens. In fact, the interior is
 covered in touchable displays, set up for an immersive digital
 experience. But beneath this shiny media exterior sits a relatively
 unglamorous purpose:  its publicity photos show serious-looking, young white
-businesspeople in uniform grey work clothing.\cite{???} The environment is
+businesspeople in uniform grey work clothing \cite{???}. The environment is
 high tech and sharply clinical. Far from an exuberant depiction of the
 promise of media technology in the automobile, this future is so
 serious as to be dull: a homogeneous work space bleeding out into
