--- a/main.bib
+++ b/main.bib
@@ -1587,6 +1587,170 @@
    year = 2008,
 }
 
+@TECHREPORT{aevita,
+   author = "Nicholas Pennycooke",
+   title = "{AEVITA}: {D}esigning {B}iomimetic {V}ehicle-to-{P}edestrian {C}ommunication {P}rotocols for {A}utonomously {O}perating /& {P}arking {O}n-{R}oad {E}lectric {V}ehicles",
+   institution = "Master's Thesis MIT Media Arts and Sciences",
+   month = "August 7",
+   year = 2012,
+}
+
+@ARTICLE{voxNorton,
+   author = "Joseph Stromberg",
+   title = "The forgotten history of how automakers invented the crime of 'jaywalking'",
+   journal = "Vox",
+   month = "January 15",
+   year = "2015",
+   note = "http://www.vox.com/2015/1/15/7551873/jaywalking-history",
+}
+
+@BOOK{zelizer,
+   author = "Viviana A. Zelizer",
+   title = "Pricing the Priceless Child: The Changing Social Value of Children",
+   publisher = "Princeton University Press",
+   address = "Princeton, NJ",
+   year = "1994",
+}
+
+@ARTICLE{voxCycle,
+   author = "Joseph Stromberg",
+   title = "'Roads were not built for cars': how cyclists, not drivers, first fought to pave US roads",
+   journal = "Vox",
+   month = "March 19",
+   year = "2015",
+   note = "http://www.vox.com/2015/3/19/8253035/roads-cyclists-cars-history",
+}
+
+@ARTICLE{lochlannjain,
+   author = "Sarah S. Lochlann Jain",
+   title = "'Dangerous Instrumentality': The Bystander as Subject in Automobility",
+   journal = "Cultural Anthropology",
+   volume = 19,
+   number = 1,
+   pages = "61--94",
+   year = "2004",
+}
+
+@UNPUBLISHED{androidHuman,
+   author = "Philip K. Dick",
+   title = "The Android and the Human",
+   year = "1972",
+   note = "Speech given at the Vancouver Science Fiction Convention, University of British Colombia. Originally published in SF Commentary #31. Full text at http://genius.com/Philip-k-dick-the-android-and-the-human-annotated#note-4386783",
+}
+
+@ARTICLE{clyneskline,
+   author = "Manfred E. Clynes and Nathan S. Kline",
+   title = "Cyborgs and space",
+   journal = "Astronautics",
+   month = "September",
+   year = "1960",
+}
+
+@INCOLLECTION{haraway,
+   author = "Donna Haraway",
+   title = "A Cyborg Manifesto: Science, Technology, and Socialist-Feminism in the Late 20th Century",
+   booktitle = "The International Handbook of Virtual Learning Environments",
+   publisher = "Springer",
+   editor = "Joel Weiss and Jason Nolan and Jeremy Hunsinger and Peter Trifonas",
+   year = 2006,
+   month = "June",
+   pages = "117--158",
+}
+
+@ARTICLE{suemycar,
+   author = "Jeffrey K. Gurney",
+   title = "Sue My Car Not Me: Products Liability and Accidents Involving Autonomous Vehicles",
+   journal = "U. Ill. J. L. Tech /& Pol'y",
+   number = 247,
+   month = "November",
+   year = "2013",
+   note = "Available at SSRN: http://ssrn.com/abstract=2352108",
+}
+
+@ARTICLE{proximityLiability,
+   author = "Bryant Walker Smith",
+   title = "Proximity Driven Liability",
+   journal = "Georgetown Law Journal",
+   month = "November",
+   year = "2013",
+   number = 1777,
+   note = "Available at SSRN: http://ssrn.com/abstract=2336234",
+}
+
+@ARTICLE{slashgearDavies,
+   author = "Chris Davies",
+   title = "How Mercedes' F 015 self-driving car is shaping smart cities",
+   journal = "SlashGear",
+   month = "March 20",
+   year = "2015",
+   note = "http://www.slashgear.com/how-mercedes-f-015-self-driving-car-is-shaping-smart-cities-20374602/",
+}
+
+@ARTICLE{forbesDawson,
+   author = "Freddie Dawson",
+   title = "How Far Away Is Driverless Technology Really?",
+   journal = "Forbes",
+   month = "March 31",
+   year = "2015",
+   note = "http://www.forbes.com/sites/freddiedawson/2015/03/31/how-far-away-is-driverless-technology-really/",
+}
+
+@ARTICLE{slashgearDaviesT,
+   author = "Chris Davies",
+   title = "Tesla Model S Autopilot update due in 3-4 months",
+   journal = "SlashGear",
+   month = "March 19",
+   year = "2015",
+   note = "http://www.slashgear.com/tesla-model-s-autopilot-update-due-in-3-4-months-19374458/",
+}
+
+@TECHREPORT{SivakSchoettleSick,
+   author = "Michael Sivak and Brandon Schoettle",
+   title = "{M}otion {S}ickness in {S}elf-{D}riving {V}ehicles",
+   institution = "The University of Michigan Transporatation Research Institute",
+   number = "UMTRI-2015-12",
+   month = "April",
+   year = 2015,
+}
+
+@ARTICLE{greenfieldSmart,
+   author = "Adam Greenfield",
+   title = "The smartest cities rely on citizen cunning and unglamorous technology",
+   journal = "The Guardian",
+   month = "December 22",
+   year = "2014",
+   note = "http://www.theguardian.com/cities/2014/dec/22/the-smartest-cities-rely-on-citizen-cunning-and-unglamorous-technology",
+}
+
+@ARTICLE{baileyReason,
+   author = "Ronald Bailey",
+   title = "Robot Cars Are a Moral Imperative",
+   journal = "Reason.com Hit \& Run Blog",
+   month = "June 10",
+   year = "2014",
+   note = "http://reason.com/blog/2014/06/10/robot-cars-are-a-moral-imperative",
+}
+
+@ARTICLE{howardRobots,
+   author = "Don Howard",
+   title = "Robots on the Road: The Moral Imperative of the Driverless Car",
+   journal = "University of Notre Dame Blog Network: Science Matters",
+   month = "November 7",
+   year = "2013",
+   note = "http://donhoward-blog.nd.edu/2013/11/07/robots-on-the-road-the-moral-imperative-of-the-driverless-car/",
+}
+
+@ARTICLE{ScienceRadio,
+   key = "Science: Radio Auto",
+   author = "",
+   title = "{S}cience: {R}adio {A}uto",
+   journal = Time Magazine,
+   month = "August 10",
+   year = "1925",
+   note = "http://content.time.com/time/magazine/article/0,9171,720720,00.html",
+}
+
+
 
 
 
